# threads-ai-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: analyze.yml  manual.yml  publish-now.yml  publish.yml  reply.yml  research.yml
config/: brand_voice.md  funnel.json  trend_sources.json
data/: blocked_drafts.json  blocked_replies.jsonl  daily_reports.jsonl  dry_run_publish.jsonl  post_queue.json  published_posts.jsonl  replies_seen.jsonl  topics.json  trend_topics.json
docs/superpowers/plans/: 2026-06-21-threaded-trend-posting.md  2026-06-22-fully-automated-operations.md  2026-06-22-threads-viral-copy-style.md  2026-06-23-longer-thread-parts.md
docs/superpowers/specs/: 2026-06-21-threaded-trend-posting-design.md
src/threads_ai_agent/: analyzer_agent.py  cli.py  config.py  models.py  openai_client.py  publisher_agent.py  reply_agent.py  research_agent.py  safety.py  storage.py  threads_client.py  trend_agent.py  wordpress.py  writer_agent.py
tests/: test_analyzer_agent.py  test_cli.py  test_config.py  test_publisher_agent.py  test_reply_agent.py  test_research_agent.py  test_safety.py  test_storage.py  test_threads_client.py  test_trend_agent.py  test_writer_agent.py
